# dbmonitor

./: .env  .gitignore  Cargo.toml  README.md  input.css
.cursor/rules/: module-organization.mdc
migrations/: V1__init.sql  V2__device_name_nullable.sql  V3__optimize_for_high_throughput.sql
mock_device/: Cargo.toml
mock_device/src/: main.rs
src/: cache.rs  database.rs  main.rs  middleware.rs  routes.rs  token.rs  websocket.rs
src/routes/: api.rs  pages.rs
static/: dashboard.html  error.html  output.css
templates/: dashboard.html  error.html  hello.html  home.html
test_client_scripts/: test_client.js  token.txt
