[package]
name = "dbmonitor"
version = "0.1.0"
edition = "2024"

[dependencies]
axum = "0.8.4"
tokio = { version = "1.45.1", features = ["full"] }
tokio-postgres = { version = "0.7.13", features = ["with-chrono-0_4"] }
tower = "0.5.2"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0"
chrono = { version = "0.4.41", features = ["serde"] }